option('gnustl', type: 'feature',
       value: 'auto',
       description: 'Use gnustl for a c++ library implementation (only used on Android)')
option('neon', type: 'combo',
       choices: ['no', 'yes', 'auto', 'runtime'],
       description: '')
option('rnnoise_path', type: 'string',
       description: 'Use rnnoise for noise suppression instead the internal implementation, Android only')